Modified the Makefile in SRC for mixedBeamColumn element

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -620,7 +620,8 @@ ELE_LIBS   =  $(FE)/element/Element.o \
 	$(FE)/element/UWelements/EmbeddedBeamInterfaceL.o \
 	$(FE)/element/UWelements/EmbeddedBeamInterfaceP.o \
 	$(FE)/element/UWelements/EmbeddedEPBeamInterface.o \
-	$(FE)/element/UWelements/Tcl_generateInterfacePoints.o
+	$(FE)/element/UWelements/Tcl_generateInterfacePoints.o \
+	$(FE)/element/mixedBeamColumn/mixedBeamColumn3d.o
 
 #	$(FE)/material/nD/Damage2p.o \
 #	$(FE)/material/nD/Damage2p3D.o \
